@@ -44,6 +44,8 @@ public final class ExampleStore implements CronjobStore
 				new FailureJob(1),
 				new SlowJob(1, 0),
 				new SlowJob(2, 5000),
+				new InactiveJob(1),
+				new InactiveJob(2),
 				new InterruptableJob(),
 				new InterruptableSlowerJob(),
 				new NetworkBlockedJob(),
