@@ -106,10 +106,6 @@ public class CronjobManager extends HttpServlet
 			}
 		}
 
-		final String EXECUTE = "com.exedio.cronjob.execute";
-		final String doExecuteStr = getServletConfig().getServletContext().getInitParameter(EXECUTE);
-		final boolean doExecute = "false".equalsIgnoreCase(doExecuteStr) ? false : true;
-
 		handlers = new ArrayList<Handler>();
 		int idCounter = 1;
 		for ( CronjobStore store: stores )
@@ -117,7 +113,7 @@ public class CronjobManager extends HttpServlet
 			final long storeInitialDelay = store.getInitialDelayInMilliSeconds();
 			for (final Job job: store.getJobs())
 			{
-				final Handler handler = new Handler(job, idCounter++, storeInitialDelay, doExecute);
+				final Handler handler = new Handler(job, idCounter++, storeInitialDelay);
 				handlers.add(handler);
 				handler.startThread();
 			}
