@@ -7,6 +7,9 @@ omit bug fixes.
 The items are sorted inversely, i.e. lastest items are on top
 
 --------------------------------------------------------------------------
+* removed context parameter com.exedio.cronjob.execute
+	this is not backwards compatible!
+	replaced by Job#isActiveInitially()
 * The parameter 'store' of the CronjobManager servlet now supports a comma-separated list of CronjobStore class names.
 * set thread name to "exedio cronjob: " + jobName
 * Interrupter from exedio-cope-util.jar is used
